<resources>
    <string name="app_name">BUS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome Back!</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="scan">Scan Barcode</string>
    <string name="pilih">Pilih Jalur</string>
    <string name="home">Home</string>
</resources>