<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.login.LoginFragment">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/circle1"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@drawable/circle"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.AppCompatImageView>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:background="@drawable/circle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/circle1"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"></androidx.appcompat.widget.AppCompatImageView>

    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="28sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ivIllustration"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="28sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/ivIllustration"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivIllustration"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintVertical_bias="0.3"
        android:src="@drawable/ic_illustration"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etUsername"
        android:hint="@string/hint_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="text"
        android:paddingVertical="16dp"
        android:paddingHorizontal="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/ivIllustration"
        android:layout_marginHorizontal="16dp"/>



    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPassword"
        android:hint="@string/hint_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUsername"
        android:layout_marginTop="8dp"
        android:paddingVertical="16dp"
        android:paddingHorizontal="24dp"
        android:inputType="textPassword"
        android:background="@drawable/white_background"
        android:layout_marginHorizontal="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="16dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="@color/white"
        />


</androidx.constraintlayout.widget.ConstraintLayout>