<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivIcon"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_check"
            android:tint="@color/colorPrimaryDark"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ivIcon"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="SUCCESS"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:textSize="18sp"/>
        
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:gravity="center"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorAccent"
            tools:text="@string/pilih"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnScan"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/tvDesc"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="16dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/scan"
            android:textStyle="bold"
            android:textColor="@color/white"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnHome"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/btnScan"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginHorizontal="16dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/home"
            android:textStyle="bold"
            android:textColor="@color/white"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>